# pkcs11rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  build.rs  deny.toml  pkcs11rs.h  test_hardware.py  test_pkcs11.py
.cargo/: config.toml
.github/: SECURITY.md
.github/workflows/: ci.yml
certificates/: README.md
conformance/: README.md  __init__.py  oasis_cases.py  run_oasis.py  test_oasis.py
docs/: ccid.md  openpgp.md  piv.md  scp03.md  scp11.md  yubihsm-auth.md
src/: abi_test_backend.rs  certificate_builder.rs  certificate_chain.rs  connector.rs  context.rs  error.rs  hsmauth.rs  iso7816.rs  lib.rs  mechanism.rs  object.rs  openpgp.rs  pinentry.rs  piv.rs  pkcs11.rs  scp03.rs  scp11.rs  secure_channel_crypto.rs  security_domain.rs  test.rs  yubico_kdf.rs  yubihsm.rs
src/api/: crypt.rs  general.rs  hsmauth.rs  interfaces.rs  key.rs  object.rs  security_domain.rs  session.rs  yubihsm.rs
src/api/crypt/: digest.rs  encrypt.rs  shared.rs  sign.rs  verify.rs
src/backend/: ccid.rs  crypto.rs  openpgp.rs  piv.rs  traits.rs  yubihsm.rs
src/fixtures/: test-rsa-private-key.pem
src/openpgp/: tests.rs
src/piv/: tests.rs
src/scp03/: tests.rs
src/scp11/: tests.rs
src/tests/: common.rs  crypto.rs  general.rs  hardware.rs  interfaces.rs  key.rs  object.rs
src/yubihsm/: commands.rs  tests.rs  trust.rs
src/yubihsm/commands/: audit.rs  crypto.rs  device.rs  object.rs  otp.rs  protocol.rs  response.rs  tests.rs  wrapping.rs
xtask/: Cargo.toml
xtask/src/: main.rs
