[package]
name = "pkcs11rs"
version = "0.1.0"
edition = "2021"
description = "PKCS #11 provider for YubiKey CCID applets and YubiHSM devices"
readme = "README.md"
repository = "https://github.com/qpernil/pkcs11rs"
license = "MIT OR Apache-2.0"
keywords = ["pkcs11", "cryptoki", "yubikey", "yubihsm", "hsm"]
categories = ["api-bindings", "cryptography", "hardware-support"]

[lib]
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

[features]
abi-tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
cmac = "0.7.2"
des = "0.8.1"
getrandom = "0.3.4"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rusb = "0.9.4"
pcsc = "2.9.0"
curl = "0.4.50"
flate2 = "1.1.9"
openssl = "0.10.81"
zeroize = "1.9.0"
const-oid = "0.9.6"
der = { version = "0.7.10", features = ["alloc", "pem", "std"] }
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa", "pem", "pkcs8"] }
p384 = { version = "0.13.1", features = ["ecdsa", "pem", "pkcs8"] }
rsa = { version = "0.9.8", features = ["pem", "sha2"] }
rustls-pki-types = "1.15.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.9", features = ["oid"] }
sha3 = "0.10.8"
signature = "2.2.0"
spki = { version = "0.7.3", features = ["alloc", "pem", "std"] }
subtle = "2.6.1"
x509-cert = { version = "0.2.5", features = ["builder", "pem", "std"] }
webpki = { package = "rustls-webpki", version = "0.103.13", features = ["ring", "std"] }

[build-dependencies]
bindgen = "0.72.1"
