[package]
name = "pkcs11rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "PKCS #11 provider for YubiKey CCID applets and YubiHSM devices"
readme = "README.md"
repository = "https://github.com/qpernil/pkcs11rs"
license = "MIT OR Apache-2.0"
keywords = ["pkcs11", "cryptoki", "yubikey", "yubihsm", "hsm"]
categories = ["api-bindings", "cryptography", "hardware-support"]

[lib]
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

[features]
abi-tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
cmac = "0.7.2"
des = "0.8.1"
getrandom = "0.4.3"
hmac = "0.13.0"
pbkdf2 = "0.13.0"
rusb = "0.9.4"
pcsc = "2.9.0"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
flate2 = "1.1.9"
zeroize = "1.9.0"
const-oid = "0.10.2"
der = { version = "0.8.1", features = ["alloc", "pem", "std"] }
ed25519-dalek = "3.0.0"
p256 = { version = "0.14.0", features = ["ecdh", "ecdsa", "pem", "pkcs8"] }
p384 = { version = "0.14.0", features = ["ecdsa", "pem", "pkcs8"] }
pkcs8 = { version = "0.11.0", features = ["alloc", "pem", "std"] }
rsa = { version = "0.9.10", features = ["pem", "sha2"] }
rustls-pki-types = "1.15.1"
sha1 = { version = "0.11.0", features = ["oid"] }
sha2 = { version = "0.11.0", features = ["oid"] }
sha3 = "0.12.0"
signature = "3.0.0"
sec1 = { version = "0.8.1", features = ["alloc", "pem", "std"] }
spki = { version = "0.8.0", features = ["alloc", "pem", "std"] }
subtle = "2.6.1"
x509-cert = { version = "0.3.0", features = ["builder", "pem", "std"] }
x25519-dalek = { version = "3.0.0", features = ["static_secrets"] }
webpki = { package = "rustls-webpki", version = "0.103.13", features = ["ring", "std"] }
